--- a/index.html
+++ b/index.html
@@ -205,12 +205,9 @@
 
 class: center, middle, inverse
 
-# Automating the Vox Pupuli Yak Shaving
-
-## Automate all the yak shaving!
+# You thought scaling infra is hard, try scaling team contributions!
 
 ???
-
 
 ---
 
