--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@ class: center, middle, inverse
 
 # You thought scaling infra is hard, try scaling team contributions!
 
+## Covid-19 edition
+
 ???
 
 ---
@@ -218,7 +220,7 @@ class: center, middle, inverse
 
 * Puppet Contributor since 2012
 
-* Merging stuff on [Vox Pupuli](https://voxpupuli.org/)  (Puppet Community) since 2015
+* Merging stuff on [Vox Pupuli](https://voxpupuli.org/) (Puppet Community) since 2015
 
 * Vox Pupuli Project Management Committee member
 
