--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@ metadata.json needs to be adjusted everywhere (upper version boundaries)
 
 * Many files are very similar
 
-  * .travis.yml, Gemfile, Rakefile
+  * GitHub actions CI configuration, Gemfile, Rakefile
+
+* Modulesync manages 20 files in total per module
 ]
 
 .footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
@@ -449,6 +451,7 @@ metadata.json needs to be adjusted everywhere (upper version boundaries)
 
 .right-column[
 ![img](releases.png)
+([forge.puppet.com/puppet](https://forge.puppet.com/modules/puppet?limit=25&sort_by=latest_release&module_groups=base%20pe_only) with all our modules)
 ]
 
 .footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
